--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic.png" alt="Long Tang's profile picture"/>
+            <img src="./assets/profile-pic-cat.png" alt="Long Tang's profile picture"/>
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -63,10 +63,190 @@
                 alt="My LinkedIn profile" 
                 class="icon" 
                 onclick="location.href='https://github.com/LongThanhTng'"
+                />
+                 <img 
+                src="./assets/instagram.png" 
+                alt="My instagram" 
+                class="icon" 
+                onclick="location.href='https://www.instagram.com/_ttl6821_/'"
+                /> 
+                <img 
+                src="./assets/facebook.png" 
+                alt="My facebook profile" 
+                class="icon" 
+                onclick="location.href='https://www.facebook.com/tangthanhlong68/'"
                 /> 
             </div>
         </div>
     </section>
-    <script src="script.js"></script>
+    <section id="about">
+        <p class="section__text__p1">Get to know more</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section_pic-container">
+                <img src="./assets/about-pic (2).jpg"
+                alt="Profile picture"
+                class="about-pic"
+                />
+            </div>
+            <dic class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png" 
+                        alt="Experience icon"
+                        class="icon"
+                        />
+                        <h3>Experiences</h3>
+                        <p>Not even 10 hours Front end developpement</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" 
+                        alt="Educations icon"
+                        class="icon"
+                        />
+                        <h3>Educations</h3>
+                        <p>Bachelor of Computer Science <br/> Master of Sleep</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Accusantium nobis expedita eligendi eius ad eos rem laboriosam 
+                        qui est nemo a alias, quod ratione reprehenderit error aperiam accusamus non doloribus cumque omnis minus adipisci. Impedit, iure iusto? Aut sint earum, 
+                        praesentium ipsum inventore odio aperiam id maxime, sit possimus voluptatibus.</p>
+                </div>
+            </dic>
+        </div>
+        <img src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+        />
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Frontend developpement</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/html.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>HTML</h3>
+                               <p>Noob WORKING ON RIGHT NOW</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/css.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>CSS</h3>
+                               <p>Noob WORKING ON RIGHT NOW</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/javascript.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>Javascript</h3>
+                               <p>Noob WORKING ON RIGHT NOW</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/react.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>React</h3>
+                               <p>Noob  PENDING</p>     
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Backend developpement</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/php.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>php</h3>
+                               <p>Noob PENDING</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/nodejs.png "
+                            alt="Experience icon"
+                            class="icon"
+                            
+                            />
+                            <div>
+                               <h3>Nodejs</h3>
+                               <p>Noob PENDING</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/sql.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>SQL</h3>
+                               <p>Noob PENDING</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/postgresql.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>PostgreSQL</h3>
+                               <p>Noob PENDING</p>     
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/git.png"
+                            alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                               <h3>Git</h3>
+                               <p>Noob PENDING</p>     
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <img src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+        />
+    </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="details-container color-container">
+            <div class="article-container">
+                <img src="./assets/"
+            </div>
+        </div>
+    </section>
+</section>    
+<script src="script.js"></script>
 </body>
 </html>
