--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body> 
+    <div id="english-content" style="display:none;">
     <nav id="desktop-nav">
-        <div class="logo">Long Tang</div>
+        <div class="logo">Pully Tattooist</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experiences</a></li>
-                <li><a href="#projects">Projects</li>
+                <li><a href="#arts">Arts</li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Long Tang</div>
+        <div class="logo">Pully Tattooist</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -33,50 +34,43 @@
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#experience" onclick="toggleMenu()">Experiences</a></li>
-                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                <li><a href="#arts" onclick="toggleMenu()">Arts</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </div>
     </div>
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./assets/profile-pic-cat.png" alt="Long Tang's profile picture"/>
+            <img src="./linh's images/profile_img_linh.png" alt="Pully's profile picture"/>
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Long TANG</h1>
-            <p class="section__text__p2">Frontend Baby Developper</p>    
+            <h1 class="title">Linh</h1>
+            <p class="section__text__p2">Fine line Tattooist 𝐸𝑀 𝐵𝐸́ 𝑇𝐻𝑂̛̣ 𝑋𝐴̆𝑀 ♡🧸</p>    
             <div class="btn-container">
                 <button class="btn btn-color-2"
                  onclick="window.open('./assets/finn-resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1"
-                 onclick="location.href='./#contact'">Contact Info</button>
+                 onclick="location.href='./#contact'">Contact Info - Booking</button>
             </div>
             <div id="socials-container">
-                <img 
-                src="./assets/linkedin.png" 
-                alt="My LinkedIn profile" 
-                class="icon" 
-                onclick="location.href='https://www.linkedin.com/in/thanh-long-tang-7023ab226/'"
-                /> 
-                <img 
-                src="./assets/github.png" 
-                alt="My LinkedIn profile" 
-                class="icon" 
-                onclick="location.href='https://github.com/LongThanhTng'"
-                />
                  <img 
                 src="./assets/instagram.png" 
                 alt="My instagram" 
                 class="icon" 
-                onclick="location.href='https://www.instagram.com/_ttl6821_/'"
+                onclick="location.href='https://www.instagram.com/pully.tattooist/'"
                 /> 
                 <img 
                 src="./assets/facebook.png" 
                 alt="My facebook profile" 
                 class="icon" 
-                onclick="location.href='https://www.facebook.com/tangthanhlong68/'"
-                /> 
+                onclick="location.href='https://www.facebook.com/imm.linhh'"
+                /> <img 
+                src="./linh's images/tiktok-icon.png" 
+                alt="My facebook profile" 
+                class="icon" 
+                onclick="location.href='https://www.tiktok.com/@linhlinhtattoo'"
+                />
             </div>
         </div>
     </section>
@@ -85,7 +79,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section_pic-container">
-                <img src="./assets/about-pic (2).jpg"
+                <img src="./linh's images/about_pic.jpg"
                 alt="Profile picture"
                 class="about-pic"
                 />
@@ -98,7 +92,7 @@
                         class="icon"
                         />
                         <h3>Experiences</h3>
-                        <p>Not even 10 hours Front end developpement</p>
+                        <p>Xăm</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" 
@@ -238,7 +232,7 @@
         onclick="location.href='./#projects'"
         />
     </section>
-    <section id="projects">
+    <section id="arts">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
@@ -313,14 +307,14 @@
                 alt="Email icon"
                 class="icon contact-icon email-icon" 
                 />
-            <p><a href="mailto:shinosuke201@gmail.com">shinosuke201@gmail.com</a></p>
+            <p><a href="mailto:shinosuke201@gmail.com">EMAIL CUA LINH@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png"
                 alt="LinkedIn icon"
                 class="icon contact-icon"
                 />
-                <p><a href="https://www.linkedin.com/in/thanh-long-tang-7023ab226/">LinkedIn</a></p>
+                <p>No 0983350424</a></p>
             </div>
         </div> 
     </section>   
@@ -330,7 +324,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experiences</a></li>
-                    <li><a href="#projects">Projects</li>
+                    <li><a href="#projects">Arts</li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -340,5 +334,7 @@
         </footer>
     </footer>  
 <script src="script.js"></script>
+</div>
+</body>
 </body>
 </html>
